FIX index.html: doplněno kódování

--- a/www/index.html
+++ b/www/index.html
@@ -1,2 +1,3 @@
 <!doctype html>
-<a href="_templates/">zobrazit statické šablony</a>
+<meta charset="utf-8">
+<a href="_templates/index.html">zobrazit statické šablony</a>
