REFACTORING template layout: odstraněna nepoužitelná vlastnost pro shadow dom

--- a/www/_templates/layout.html
+++ b/www/_templates/layout.html
@@ -28,7 +28,7 @@
 
         <title></title>
 
-        <link rel="stylesheet" href="/dist/style/main.css" shim-shadowdom>
+        <link rel="stylesheet" href="/dist/style/main.css">
 
         <!-- Nedávat na produkci -->
         <script>
