--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
 <meta charset="utf-8">
-<a href="_templates/index.html">zobrazit statické šablony</a>
+<a href="dist/templates/index.html">zobrazit statické šablony</a>
