--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
 <meta charset="utf-8">
-<a href="dist/templates/index.html">zobrazit statické šablony</a>
+<a href="build/templates/index.html">zobrazit statické šablony</a>
